fix(confirmation): fixed left alignment in mobile component (#1127)

--- a/packages/confirmation/src/components/screens/hint/index.module.css
+++ b/packages/confirmation/src/components/screens/hint/index.module.css
@@ -47,5 +47,4 @@
 .phoneContentMobile {
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
